--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,4 @@
-body {background-color:cornflowerblue; color:#fff;}
+body {
+    background-color:cornflowerblue; color:#fff; margin:0; min-height:100vh;
+    display:flex; align-items:center; justify-content:center;
+}
