--- a/examples/style.css
+++ b/examples/style.css
@@ -1,10 +1,29 @@
 body {
     background-color:#fff; color:#000; margin:0; min-height:100vh;
-    display:flex; align-items:center; justify-content:center;
-    font-family:"Roboto", sans-serif; font-size:18px;
+    display:flex; align-items:center; justify-content:space-between; flex-direction:column;
+    font-family:"Nunito", sans-serif; font-size:20px;
     line-height:1.5;
 }
+body:before {content:"";}
 .container {
     width:100%;
     max-width:768px;
+    padding:0 20px;
 }
+
+code {
+    background:aliceblue; display:block;
+    padding:10px; border-radius:5px;
+    font-size:16px;
+}
+
+.btn {
+    text-decoration:none;
+    background:cornflowerblue; color:#fff;
+    border-radius:4px; padding:10px 30px;
+}
+
+footer {
+    padding:5vh 20px;
+}
+footer a {text-decoration:none;}
