--- a/examples/style.css
+++ b/examples/style.css
@@ -1,3 +1,4 @@
+* {cursor:none;}
 body {
     background-color:#fff; color:#000; margin:0; min-height:100vh;
     display:flex; align-items:center; justify-content:space-between; flex-direction:column;
