--- a/examples/style.css
+++ b/examples/style.css
@@ -34,5 +34,6 @@ a {color:cornflowerblue;}
 
 footer {
     padding:5vh 20px;
+    text-align:center;
 }
 footer a {text-decoration:none; display:inline-block;}
