--- a/dev/style.scss
+++ b/dev/style.scss
@@ -3,10 +3,10 @@ section {
   margin-bottom: 80px;
 }
 
-/* Grid demo */
-.cursor-grid-demo article {
+/* Box */
+.cursorjs-box {
   background: springgreen;
-  aspect-ratio: 3/2;
+  aspect-ratio: 16/9;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -14,8 +14,13 @@ section {
   font-weight: 700;
 }
 
+/* Grid demo */
+.cursorjs-grid-demo article {
+  aspect-ratio: 3/2;
+}
+
 /* Image */
-.cursor-image img {
+.cursorjs-image img {
   aspect-ratio: 1280/560;
   width: 100%;
 }
@@ -24,13 +29,37 @@ section {
 /**
  * Custom on hover
  */
-.css-cursor.style-grid .css-cursor-inner {
-  width: 60px;
-  height: 60px;
+/* default */
+#cursor-dot.default .css-cursor-inner {
+  opacity: 0 !important;
 }
 
-.css-cursor.style-image .css-cursor-inner {
-  width: 100px;
-  height: 100px;
-  background: rgba(255, 255, 255, .4);
+/* grid */
+#cursor-dot.grid .css-cursor-inner {
+  width: 20px !important;
+  height: 20px !important;
+  mix-blend-mode: difference;
+  opacity: .5 !important;
+}
+
+/* image */
+#cursor-ring.image .css-cursor-inner {
+  width: 83px !important;
+  height: 83px !important;
+  box-shadow: 0 0 0 1px rgba(255, 255, 255, .5) !important;
+}
+
+#cursor-dot.image .css-cursor-inner {
+  width: 80px !important;
+  height: 80px !important;
+  opacity: .5 !important;
+  mix-blend-mode: difference;
+  background-color: #8f97f8 !important;
+}
+
+@media only screen and (max-width: 1180px) {
+  #cursor-ring,
+  #cursor-dot {
+    display: none;
+  }
 }
